--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 :root {
   --primary-color: #2d3e50;
   --secondary-color: #fbaa33;
+  --text-color-1: #444444;
+  --text-color-2: #666666;
+  --dark-text-color-1: #222222;
+  --dark-text-color-2: #212529;
+  --light-text: #999999;
 }
 
 * {
@@ -35,4 +40,25 @@ ul,
 ol {
   margin: 0;
   padding: 0;
+}
+
+.section_heading h2 {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 38px;
+  color: var(--primary-color);
+}
+
+.section_heading p {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  color: var(--text-color-2);
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  color: var(--text-color-1);
 }
