--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   --dark-text-color-1: #222222;
   --dark-text-color-2: #212529;
   --light-text: #999999;
+  --bg-color: #f5f5f5;
 }
 
 * {
@@ -60,5 +61,19 @@ h3 {
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
+  color: var(--text-color-1);
+}
+
+h4 {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  color: var(--dark-text-color-1);
+}
+
+h5 {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 18px;
   color: var(--text-color-1);
 }
