--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,8 @@ Nav Style
 */
 
 nav {
-  padding: 20px 0 5px !important;
+  padding: 20px 0 30px !important;
+  border-bottom: 1px solid #999;
 }
 
 nav .navbar-toggler {
