--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,6 +13,18 @@
 @media (min-width: 576px) and (max-width: 767.9px) {
 }
 
+@media (max-width: 1199.9px) {
+  nav .main_menu .nav-item .nav-link,
+  nav .get_started a {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 991.9px) {
+    nav .main_menu .nav-item .nav-link {
+    font-size: 16px;
+}
+
 @media (max-width: 767.9px) {
 }
 
