--- a/css/style.css
+++ b/css/style.css
@@ -231,9 +231,69 @@ Home Banner Style
   background-size: cover;
 }
 
+#banner .container,
+#banner .container .row {
+  height: 100%;
+}
+
 #banner .slide_content {
   height: 100%;
 }
+
+#banner .banner_content {
+  color: #ffffff;
+}
+
+#banner .banner_content h1 {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 52px;
+  line-height: 62px;
+}
+
+#banner .banner_content h1 span {
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 48px;
+}
+
+#banner .banner_content p {
+  font-size: 14px;
+  margin-bottom: 25px;
+}
+
+#banner .banner_content a {
+  font-size: 20px;
+  line-height: 30px;
+  color: #ffffff;
+  padding: 13px 22px;
+  margin-top: 25px;
+  display: inline-block;
+  border-radius: 7px;
+  -webkit-border-radius: 7px;
+}
+
+#banner .banner_content a.sec_bg {
+  background-color: var(--secondary-color);
+  margin-right: 20px;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+}
+
+#banner .banner_content a.prime_bg {
+  background-color: var(--primary-color);
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+}
+
+#banner .banner_content a.sec_bg:hover {
+  background-color: var(--primary-color);
+}
+
+#banner .banner_content a.prime_bg:hover {
+  background-color: var(--secondary-color);
+}
+
 /*
 =============
 Support Style
