--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,22 @@ Home Banner Style
   background-size: cover;
 }
 
+#banner .slide_content {
+  position: relative;
+  z-index: 1;
+}
+
+#banner .slide_content::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: -1;
+}
+
 #banner .container,
 #banner .container .row {
   height: 100%;
