--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,6 +14,19 @@
 }
 
 @media (max-width: 1199.9px) {
+  #banner .banner_content h1 {
+    font-size: 40px;
+    line-height: 48px;
+  }
+
+  #banner .banner_content h1 span {
+    font-size: 26px;
+  }
+
+  .home_slider {
+    height: 95vh;
+  }
+
   nav .main_menu .nav-item .nav-link,
   nav .get_started a {
     font-size: 15px;
@@ -23,6 +36,20 @@
 @media (max-width: 991.9px) {
   nav .main_menu .nav-item .nav-link {
     font-size: 16px;
+  }
+
+  #banner .slider_arrows .slider_left_arrow,
+  #banner .slider_arrows .slider_right_arrow {
+    height: 40px;
+    width: 40px;
+  }
+
+  .slider_arrows i {
+    line-height: 40px;
+  }
+
+  #banner .banner_content {
+    text-align: center;
   }
 }
 
