--- a/css/style.css
+++ b/css/style.css
@@ -341,6 +341,7 @@ Home Banner Style
 #banner .banner_content a.prime_bg {
   background-color: var(--primary-color);
   transition: 0.5s;
+  margin-right: 20px;
   -webkit-transition: 0.5s;
 }
 
