--- a/css/style.css
+++ b/css/style.css
@@ -532,6 +532,47 @@ Our Courses Style
   padding: 0 !important;
 }
 
+.courses_wrapper {
+  position: relative;
+  margin-top: 40px;
+}
+
+.course_slider_left_arrow i,
+.course_slider_right_arrow i {
+  font-size: 28px;
+  line-height: 60px;
+  height: 60px;
+  width: 60px;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+}
+
+.course_slider_left_arrow:hover i,
+.course_slider_right_arrow:hover i {
+  color: #f1f1f1;
+  background-color: var(--secondary-color);
+  border-color: var(--secondary-color);
+}
+
+.course_slider_left_arrow,
+.course_slider_right_arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+}
+
+.course_slider_left_arrow {
+  left: -70px;
+}
+.course_slider_right_arrow {
+  right: -70px;
+}
+
 #home_course .course_item {
   padding: 20px;
   background-color: var(--bg-color);
