--- a/css/style.css
+++ b/css/style.css
@@ -529,7 +529,8 @@ Our Courses Style
 }
 
 #home_course .container {
-  padding: 0 !important;
+  /* padding-left: 0 !important;
+  padding-right: 0 !important; */
 }
 
 .courses_wrapper {
@@ -712,4 +713,9 @@ Our Courses Style
   left: 50%;
   transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
+}
+
+.enroll_btn a {
+  font-size: 16px;
+  padding: 13px 20px;
 }
