--- a/css/style.css
+++ b/css/style.css
@@ -664,7 +664,8 @@ Our Courses Style
   color: var(--text-color-1);
 }
 
-.course_author_rating i {
+.course_author_rating i,
+.testimonial_rating i {
   font-size: 12px;
   color: var(--secondary-color);
   margin-bottom: 7px;
@@ -727,7 +728,7 @@ Home Event Style
 }
 
 .event_cal {
-  height: 516px;
+  height: 510px;
   padding: 30px;
   background-color: var(--bg-color);
   transition: 0.5s;
@@ -856,4 +857,71 @@ Home Event Style
   font-size: 16px;
   padding: 10px 20px;
   line-height: 24px;
+}
+
+/*
+=================
+Testimonial Style
+=================
+*/
+
+#testimonial {
+  background-color: var(--bg-color);
+  padding: 100px 0;
+}
+
+#testimonial .section_heading {
+  margin-bottom: 40px;
+}
+
+.testimonial_slide_img img {
+  clip-path: polygon(18% 0, 100% 0%, 82% 100%, 0% 100%);
+}
+
+.testimonial_slide_img {
+  position: relative;
+}
+.testimonial_slide_img::before,
+.testimonial_slide_img::after {
+  content: "";
+
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 100%;
+  height: 3px;
+}
+
+.testimonial_slide_img::before {
+  background-image: url(../images/eventslidertopBorder.png);
+  left: 0;
+  top: -10px;
+}
+.testimonial_slide_img::after {
+  background-image: url(../images/eventsliderfooterBorder.png);
+  background-position: right;
+  right: 0;
+  bottom: -10px;
+}
+
+.testimonial_des p,
+.testimonial_des h3 {
+  color: var(--text-color-1);
+}
+
+.testimonial_des p {
+  font-size: 13px;
+}
+
+.testimonial_des h3 {
+  margin: 20px 0 15px;
+  font-size: 20px;
+}
+
+.testimonial_des h3 span {
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.testimonial_rating i {
+  font-size: 14px;
 }
