added responsive css for testimonial accordion

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -113,6 +113,10 @@
     height: 40px;
     width: 40px;
   }
+
+  .testimonial_slider_arrow {
+    top: 20%;
+  }
 }
 
 @media (max-width: 767.9px) {
