--- a/css/responsive.css
+++ b/css/responsive.css
@@ -173,6 +173,17 @@
   .blog_gal_title {
     margin-top: 50px;
   }
+
+  .contact_social ul {
+    justify-content: center;
+  }
+
+  .contact_center h4,
+  .contact_right h4 {
+    font-size: 24px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
 }
 
 @media (max-width: 575.9px) {
