--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,349 +1,363 @@
 @media (min-width: 1400px) {
-  #banner .banner_content a {
-    margin-top: 100px;
-  }
-  .event_cal {
-    height: 582px;
-  }
+    #banner .banner_content a {
+        margin-top: 100px;
+    }
+
+    .event_cal {
+        height: 582px;
+    }
 }
 
 /* Large (lg) Device */
 
 @media (min-width: 1200px) {
-  #banner .slider_arrows .slider_left_arrow,
-  #banner .slider_arrows .slider_right_arrow {
-    top: 53vh;
-    height: 50px;
-    width: 50px;
-  }
 
-  #banner .banner_content a {
-    margin-top: 50px;
-  }
+    #banner .slider_arrows .slider_left_arrow,
+    #banner .slider_arrows .slider_right_arrow {
+        top: 53vh;
+        height: 50px;
+        width: 50px;
+    }
 
-  .slider_arrows i {
-    line-height: 50px;
-  }
+    #banner .banner_content a {
+        margin-top: 50px;
+    }
+
+    .slider_arrows i {
+        line-height: 50px;
+    }
 }
 
 @media (min-width: 992px) and (max-width: 1199.9px) {
-  #banner .banner_content {
-    padding-left: 100px;
-    padding-right: 100px;
-  }
+    #banner .banner_content {
+        padding-left: 100px;
+        padding-right: 100px;
+    }
 
-  .event_cal {
-    height: 450px;
-  }
+    .event_cal {
+        height: 450px;
+    }
 
-  .pb-calendar > .calendar-body-frame > .row > .col {
-    line-height: 10px;
-  }
+    .pb-calendar > .calendar-body-frame > .row > .col {
+        line-height: 10px;
+    }
 
-  .event_img {
-    padding-top: 8px;
-  }
+    .event_img {
+        padding-top: 8px;
+    }
 
-  .event_details h2 {
-    font-size: 18px;
-  }
+    .event_details h2 {
+        font-size: 18px;
+    }
 
-  .event_details .col-5 {
-    padding-right: 0;
-  }
-  .event_details .col-7 {
-    padding-left: 0;
-  }
+    .event_details .col-5 {
+        padding-right: 0;
+    }
 
-  .event_location p,
-  .event_time p {
-    font-size: 12px;
-  }
+    .event_details .col-7 {
+        padding-left: 0;
+    }
 
-  .join_btn a {
-    margin-top: 7px;
-  }
+    .event_location p,
+    .event_time p {
+        font-size: 12px;
+    }
 
-  .blog_gal_title {
-    margin-top: 40px;
-  }
+    .join_btn a {
+        margin-top: 7px;
+    }
 
-  .contact_center .col-lg-5 {
-    padding-left: 0;
-  }
+    .blog_gal_title {
+        margin-top: 40px;
+    }
+
+    .contact_center .col-lg-5 {
+        padding-left: 0;
+    }
 }
 
 /* Medium (md) Device */
 
 @media (min-width: 768px) and (max-width: 991.9px) {
-  .course_slider_left_arrow {
-    left: -35px;
-  }
-  .course_slider_right_arrow {
-    right: -35px;
-  }
+    .course_slider_left_arrow {
+        left: -35px;
+    }
+
+    .course_slider_right_arrow {
+        right: -35px;
+    }
 }
 
 /* Small (sm) Device */
 
-@media (min-width: 576px) and (max-width: 767.9px) {
-}
+@media (min-width: 576px) and (max-width: 767.9px) {}
 
 @media (max-width: 1199.9px) {
-  #banner .banner_content {
-    text-align: center;
-  }
+    #banner .banner_content {
+        text-align: center;
+    }
 
-  .home_slider {
-    height: 95vh;
-  }
+    #banner .slick-track {
+        height: 95vh;
+    }
 
-  nav .main_menu .nav-item .nav-link,
-  nav .get_started a {
-    font-size: 15px;
-  }
+    nav .main_menu .nav-item .nav-link,
+    nav .get_started a {
+        font-size: 15px;
+    }
 
-  .feat_blog_title {
-    margin-top: 80px;
-  }
-  .testimonial_slider_arrow {
-    left: -18px;
-  }
+    .feat_blog_title {
+        margin-top: 80px;
+    }
+
+    .testimonial_slider_arrow {
+        left: -18px;
+    }
 }
 
 @media (max-width: 991.9px) {
-  nav .main_menu .nav-item .nav-link {
-    font-size: 16px;
-  }
+    nav .main_menu .nav-item .nav-link {
+        font-size: 16px;
+    }
 
-  #banner .slider_arrows .slider_left_arrow,
-  #banner .slider_arrows .slider_right_arrow {
-    height: 40px;
-    width: 40px;
-  }
+    #banner .slider_arrows .slider_left_arrow,
+    #banner .slider_arrows .slider_right_arrow {
+        height: 40px;
+        width: 40px;
+    }
 
-  .slider_arrows i {
-    line-height: 40px;
-  }
+    .slider_arrows i {
+        line-height: 40px;
+    }
 
-  #banner .banner_content h1 {
-    font-size: 40px;
-  }
+    #banner .banner_content h1 {
+        font-size: 40px;
+    }
 
-  #banner .banner_content h1 span {
-    font-size: 26px;
-  }
+    #banner .banner_content h1 span {
+        font-size: 26px;
+    }
 
-  #banner .banner_content p {
-    font-size: 12px;
-  }
+    #banner .banner_content p {
+        font-size: 12px;
+    }
 
-  #counter h2 {
-    font-size: 34px;
-  }
+    #counter h2 {
+        font-size: 34px;
+    }
 
-  #counter h4 {
-    font-size: 20px;
-  }
+    #counter h4 {
+        font-size: 20px;
+    }
 
-  .course_author_img,
-  .course_title h3,
-  .course_description p {
-    text-align: center;
-  }
-  .course_author_img img {
-    display: inline-block;
-    width: initial;
-  }
+    .course_author_img,
+    .course_title h3,
+    .course_description p {
+        text-align: center;
+    }
 
-  .course_author_name {
-    margin-top: 5px;
-    margin-left: 0px;
-    text-align: center;
-  }
+    .course_author_img img {
+        display: inline-block;
+        width: initial;
+    }
 
-  .course_author_rating {
-    text-align: center;
-  }
+    .course_author_name {
+        margin-top: 5px;
+        margin-left: 0px;
+        text-align: center;
+    }
 
-  .course_slider_left_arrow i,
-  .course_slider_right_arrow i {
-    font-size: 20px;
-    line-height: 40px;
-    height: 40px;
-    width: 40px;
-  }
+    .course_author_rating {
+        text-align: center;
+    }
 
-  .testimonial_slider_arrow {
-    top: 20%;
-  }
+    .course_slider_left_arrow i,
+    .course_slider_right_arrow i {
+        font-size: 20px;
+        line-height: 40px;
+        height: 40px;
+        width: 40px;
+    }
+
+    .testimonial_slider_arrow {
+        top: 20%;
+    }
 }
 
 @media (max-width: 767.9px) {
-  #support {
-    transform: translateY(-17%);
-    -webkit-transform: translateY(-17%);
-  }
+    #support {
+        transform: translateY(-17%);
+        -webkit-transform: translateY(-17%);
+    }
 
-  .support_item:not(:last-of-type) {
-    border-right: 1px solid #dddddd;
-  }
+    .support_item:not(:last-of-type) {
+        border-right: 1px solid #dddddd;
+    }
 
-  .about_right a {
-    font-size: 16px;
-    padding: 12px 18px;
-  }
+    .about_right a {
+        font-size: 16px;
+        padding: 12px 18px;
+    }
 
-  .about_left::before,
-  .about_left::after {
-    width: 50%;
-  }
+    .about_left::before,
+    .about_left::after {
+        width: 50%;
+    }
 
-  #counter h2 {
-    font-size: 26px;
-  }
+    #counter h2 {
+        font-size: 26px;
+    }
 
-  #counter h4 {
-    font-size: 15px;
-  }
+    #counter h4 {
+        font-size: 15px;
+    }
 
-  .course_slider_left_arrow {
-    left: 0;
-  }
-  .course_slider_right_arrow {
-    right: 0;
-  }
+    .course_slider_left_arrow {
+        left: 0;
+    }
 
-  #home_event .event_details h2 {
-    font-size: 20px;
-  }
+    .course_slider_right_arrow {
+        right: 0;
+    }
 
-  .testimonial_slider_arrow {
-    top: 22%;
-  }
+    #home_event .event_details h2 {
+        font-size: 20px;
+    }
 
-  .blog_gal_title {
-    margin-top: 50px;
-  }
+    .testimonial_slider_arrow {
+        top: 22%;
+    }
 
-  .contact_social ul {
-    justify-content: center;
-  }
+    .blog_gal_title {
+        margin-top: 50px;
+    }
 
-  .contact_center h4,
-  .contact_right h4 {
-    font-size: 24px;
-    margin-top: 30px;
-    margin-bottom: 20px;
-  }
+    .contact_social ul {
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+    }
+
+    .contact_center h4,
+    .contact_right h4 {
+        font-size: 24px;
+        margin-top: 30px;
+        margin-bottom: 20px;
+    }
 }
 
 @media (max-width: 575.9px) {
-  #support {
-    padding-left: 15px;
-    padding-right: 15px;
-  }
+    #support {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 
-  .about_left::before,
-  .about_left::after {
-    width: 40%;
-  }
+    .about_left::before,
+    .about_left::after {
+        width: 40%;
+    }
 
-  .about_left::after {
-    right: 8px;
-  }
+    .about_left::after {
+        right: 8px;
+    }
 
-  #counter h4 {
-    font-size: 16px;
-    margin-top: 0;
-    margin-bottom: 6px;
-  }
+    #counter h4 {
+        font-size: 16px;
+        margin-top: 0;
+        margin-bottom: 6px;
+    }
 
-  #counter .count_teacher,
-  #counter .count_student {
-    margin-bottom: 20px;
-  }
+    #counter .count_teacher,
+    #counter .count_student {
+        margin-bottom: 20px;
+    }
 
-  #home_event .container {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+    #home_event .container {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 
-  #home_event .event_details h2 {
-    margin-top: 10px;
-  }
-  .event_cal {
-    height: 427px;
-  }
+    #home_event .event_details h2 {
+        margin-top: 10px;
+    }
 
-  .pb-calendar .top-frame > .year-month-frame {
-    font-size: 24px;
-    line-height: 24px;
-  }
+    .event_cal {
+        height: 427px;
+    }
 
-  .pb-calendar .top-frame > .control-frame > .control-btn > .icon {
-    height: 24px;
-  }
+    .pb-calendar .top-frame > .year-month-frame {
+        font-size: 24px;
+        line-height: 24px;
+    }
 
-  .pb-calendar > .calendar-body-frame > .row > .col,
-  .pb-calendar > .calendar-head-frame > .row > .col {
-    font-size: calc(0.8rem + 0.9vw);
-    line-height: calc(0.75rem + 0.9vw);
-  }
+    .pb-calendar .top-frame > .control-frame > .control-btn > .icon {
+        height: 24px;
+    }
 
-  .pb-calendar > .calendar-body-frame > .row > .col,
-  .pb-calendar > .calendar-head-frame > .row > .col {
-    height: 40px;
-  }
+    .pb-calendar > .calendar-body-frame > .row > .col,
+    .pb-calendar > .calendar-head-frame > .row > .col {
+        font-size: calc(0.8rem + 0.9vw);
+        line-height: calc(0.75rem + 0.9vw);
+    }
 
-  #home_event .event_items {
-    margin-top: 40px;
-  }
+    .pb-calendar > .calendar-body-frame > .row > .col,
+    .pb-calendar > .calendar-head-frame > .row > .col {
+        height: 40px;
+    }
 
-  body {
-    overflow-x: hidden;
-  }
+    #home_event .event_items {
+        margin-top: 40px;
+    }
 
-  .test_slide_icon_next i,
-  .test_slide_icon_prev i {
-    text-align: right !important;
-    padding-right: 8px;
-  }
+    body {
+        overflow-x: hidden;
+    }
 
-  .testimonial_des p {
-    margin-top: 15px;
-  }
+    .test_slide_icon_next i,
+    .test_slide_icon_prev i {
+        text-align: right !important;
+        padding-right: 8px;
+    }
 
-  .testimonial_slider_arrow {
-    top: 20%;
-    left: -28px;
-  }
+    .testimonial_des p {
+        margin-top: 15px;
+    }
 
-  .feat_blog::after {
-    background: rgba(0, 0, 0, 0.7);
-  }
+    .testimonial_slider_arrow {
+        top: 20%;
+        left: -28px;
+    }
 
-  .feat_blog .blog_social ul {
-    display: flex;
-    justify-content: center;
-    margin-top: 20%;
-  }
+    .feat_blog::after {
+        background: rgba(0, 0, 0, 0.7);
+    }
 
-  .blog_social ul li {
-    margin-right: 20px;
-  }
+    .feat_blog .blog_social ul {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        margin-top: 20%;
+    }
 
-  .blog_gal_item .blog_social {
-    text-align: right;
-    margin-right: -5px;
-  }
+    .blog_social ul li {
+        margin-right: 20px;
+    }
+
+    .blog_gal_item .blog_social {
+        text-align: right;
+        margin-right: -5px;
+    }
 }
 
 /* Mobile Phones (Portrait Device */
 
 @media (max-width: 479px) {
-  #banner .slider_arrows .slider_left_arrow,
-  #banner .slider_arrows .slider_right_arrow {
-    top: 54vh;
-  }
+
+    #banner .slider_arrows .slider_left_arrow,
+    #banner .slider_arrows .slider_right_arrow {
+        top: 54vh;
+    }
 }
